--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,4 @@
-.div-nav-bar{background-color:red; color:white; display:flex; flex-direction:row; align-items:center; justify-content:center;};
-
+.div-titulo{background-color:red; color:white; display:flex; flex-direction:row; align-items:center; justify-content:center};
 
 
 
